--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,23 +1,23 @@
-FROM node:16.14.2-alpine
+FROM node:16.14.2-alpine AS builder
 
 WORKDIR /app
-
-ENV PATH /app/node_modules/.bin:$PATH
 
 COPY package.json ./
 COPY yarn.lock ./
 RUN yarn install --silent
 RUN yarn global add react-scripts@4.0.3 --silent
 
+ENV PATH /app/node_modules/.bin:$PATH
+
 COPY . ./
 
-CMD ["yarn", "build"]
+RUN yarn build
 
 FROM nginx:1.17-alpine
 RUN apk --no-cache add curl
 RUN curl -L https://github.com/a8m/envsubst/releases/download/v1.1.0/envsubst-`uname -s`-`uname -m` -o envsubst && \
     chmod +x envsubst && \
     mv envsubst /usr/local/bin
-COPY ./nginx.config /etc/nginx/nginx.template
+COPY ./nginx.conf /etc/nginx/nginx.template
 CMD ["/bin/sh", "-c", "envsubst < /etc/nginx/nginx.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
-COPY --from=builder /opt/web/build /usr/share/nginx/html
+COPY --from=builder /app/build /usr/share/nginx/html
