--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM node:16.14.2-alpine AS builder
+FROM node:16.14.2-alpine
 
 WORKDIR /app
 
@@ -11,13 +11,13 @@ RUN yarn global add react-scripts@4.0.3 --silent
 
 COPY . ./
 
-RUN yarn build
+CMD ["yarn", "build"]
 
 FROM nginx:1.17-alpine
 RUN apk --no-cache add curl
 RUN curl -L https://github.com/a8m/envsubst/releases/download/v1.1.0/envsubst-`uname -s`-`uname -m` -o envsubst && \
     chmod +x envsubst && \
     mv envsubst /usr/local/bin
-COPY ./nginx.conf /etc/nginx/nginx.template
+COPY ./nginx.config /etc/nginx/nginx.template
 CMD ["/bin/sh", "-c", "envsubst < /etc/nginx/nginx.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"]
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /opt/web/build /usr/share/nginx/html
